# AI-led-collaborative-output-creation

./: .gitignore  README.md  index.html
backend/: README.md  add_state_column.py  app.db  pyproject.toml  test_anthropic.py  test_anthropic_structure.py  test_fix.py  test_parse_guide.py
backend/app/: main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: chat.py  download.py  session.py
backend/app/core/: config.py
backend/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/db/models/: section.py  session.py
backend/app/schemas/: section.py  session.py
backend/app/services/: llm_service.py  llm_service_old.py  memory_service.py  orchestrator_service.py  section_service.py  session_service.py  state_db.py
backend/app/services/llm/: __init__.py  base.py  guide_parser.py  utils.py
backend/app/services/llm/phases/: __init__.py  execution.py  intake.py  planning.py  reflection.py
backend/app/services/orchestrator/: __init__.py  core.py  models.py  state_manager.py  utils.py
backend/app/services/orchestrator/phases/: __init__.py  execution.py  intake.py  planning.py  reflection.py
